recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: reassignment to val
gauche=(2*angle)
      ^